[gd_scene format=3 uid="uid://dhwx6yjjskbn7"]

[ext_resource type="Script" uid="uid://c1y00yy82bfx8" path="res://Scripts/BattleUI.gd" id="1_d8qwt"]
[ext_resource type="PackedScene" uid="uid://nnqjc4grjsyg" path="res://Scenes/CardDisplay.tscn" id="1_gl3jw"]
[ext_resource type="Texture2D" uid="uid://d0oodbqfjx62d" path="res://Art/background/1.png" id="2_sbkf8"]
[ext_resource type="PackedScene" uid="uid://yeraw55rlx1q" path="res://Scenes/PlayerHUD.tscn" id="3_vxmu1"]
[ext_resource type="PackedScene" uid="uid://bu7kfrk2ayfm6" path="res://Scenes/CombatLog.tscn" id="4_f6fb8"]

[node name="BattleUI" type="CanvasLayer" unique_id=356558085]
script = ExtResource("1_d8qwt")

[node name="Background" type="TextureRect" parent="." unique_id=241149758]
show_behind_parent = true
z_index = -200
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_sbkf8")
expand_mode = 1

[node name="ClashLayer" type="Control" parent="." unique_id=1577141681]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ClashIcon" type="Label" parent="ClashLayer" unique_id=1589396229]
layout_mode = 0
offset_left = 554.0
offset_top = 286.0
offset_right = 594.0
offset_bottom = 309.0
text = "VS"

[node name="LeftCard" parent="ClashLayer" unique_id=1871729934 instance=ExtResource("1_gl3jw")]
z_index = 300
layout_mode = 1

[node name="RightCard" parent="ClashLayer" unique_id=723946398 instance=ExtResource("1_gl3jw")]
z_index = 300
layout_mode = 1

[node name="MainLayout" type="Control" parent="." unique_id=462573134]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 15.0
offset_right = 8.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2

[node name="PreviewAnchor" type="Control" parent="MainLayout" unique_id=399922894]
anchors_preset = 0
offset_left = 509.0
offset_top = 219.0
offset_right = 549.0
offset_bottom = 259.0

[node name="PreviewCard" parent="MainLayout/PreviewAnchor" unique_id=408799389 instance=ExtResource("1_gl3jw")]
unique_name_in_owner = true
z_index = 1
layout_mode = 1
offset_left = 349.0
offset_top = -70.0
offset_right = 559.0
offset_bottom = 240.0

[node name="ToolTipLabel" type="RichTextLabel" parent="MainLayout/PreviewAnchor" unique_id=1974356343]
custom_minimum_size = Vector2(250, 0)
layout_mode = 0
offset_right = 300.0
offset_bottom = 40.0
theme_override_constants/outline_size = 3
theme_override_font_sizes/normal_font_size = 12
theme_override_font_sizes/bold_font_size = 12
bbcode_enabled = true
fit_content = true

[node name="BottomBar" type="Panel" parent="MainLayout" unique_id=2064661816]
custom_minimum_size = Vector2(0, 150)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -165.0
offset_right = -8.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0

[node name="ContentSplit" type="HBoxContainer" parent="MainLayout/BottomBar" unique_id=214545184]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabButtons" type="VBoxContainer" parent="MainLayout/BottomBar/ContentSplit" unique_id=129264920]
layout_mode = 2

[node name="Offence" type="Button" parent="MainLayout/BottomBar/ContentSplit/TabButtons" unique_id=1252430173]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Offence"

[node name="Defence" type="Button" parent="MainLayout/BottomBar/ContentSplit/TabButtons" unique_id=2021467659]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Defence"

[node name="ScrollContainer" type="ScrollContainer" parent="MainLayout/BottomBar/ContentSplit" unique_id=668411547]
layout_mode = 2
size_flags_horizontal = 3

[node name="ButtonGrid" type="GridContainer" parent="MainLayout/BottomBar/ContentSplit/ScrollContainer" unique_id=69683943]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
columns = 8

[node name="MomentumSlider" type="HSlider" parent="." unique_id=1893970328]
offset_left = 414.0
offset_top = 9.0
offset_right = 663.0
offset_bottom = 25.0
max_value = 8.0
editable = false

[node name="Label" type="Label" parent="MomentumSlider" unique_id=709846243]
layout_mode = 0
offset_left = 92.0
offset_top = 20.0
offset_right = 132.0
offset_bottom = 43.0

[node name="Label2" type="Label" parent="MomentumSlider" unique_id=924501552]
layout_mode = 0
offset_left = 89.0
offset_top = 37.0
offset_right = 129.0
offset_bottom = 60.0
text = "TEST"

[node name="P1_HUD" parent="." unique_id=2037083698 instance=ExtResource("3_vxmu1")]

[node name="P2_HUD" parent="." unique_id=1426370563 instance=ExtResource("3_vxmu1")]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_right = 0.0
grow_horizontal = 0

[node name="CombatLog" parent="." unique_id=1264011144 instance=ExtResource("4_f6fb8")]
offset_left = 12.0
offset_top = 232.0
offset_right = 312.0
offset_bottom = 432.0

[node name="LogToggle" type="CheckButton" parent="." unique_id=477266312]
offset_left = 8.0
offset_top = 199.0
offset_right = 130.0
offset_bottom = 230.0
focus_mode = 0
text = "Show Log"

[node name="MenuButton" type="Button" parent="." unique_id=2121817063]
offset_left = 1080.0
offset_top = 607.0
offset_right = 1132.0
offset_bottom = 638.0
text = "?"

[node name="EnvButton" type="Button" parent="." unique_id=1268670440]
offset_left = 13.0
offset_top = 179.0
offset_right = 78.0
offset_bottom = 204.0
theme_override_font_sizes/font_size = 12
text = "ENV: Dojo"

[node name="EnvPopup" type="PanelContainer" parent="." unique_id=974018881]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -35.0
offset_right = 25.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="EnvPopup" unique_id=641808400]
layout_mode = 2

[node name="EnvTitle" type="Label" parent="EnvPopup/VBoxContainer" unique_id=345411818]
layout_mode = 2
text = "Dojo"

[node name="HSeparator" type="HSeparator" parent="EnvPopup/VBoxContainer" unique_id=1640873590]
layout_mode = 2

[node name="EnvDetails" type="RichTextLabel" parent="EnvPopup/VBoxContainer" unique_id=520589283]
layout_mode = 2
bbcode_enabled = true

[node name="CloseEnvButton" type="Button" parent="EnvPopup/VBoxContainer" unique_id=1659386676]
layout_mode = 2
text = "Close"

[node name="EquipmentGrid" type="HBoxContainer" parent="." unique_id=1911301329]
offset_left = 32.0
offset_top = 128.0
offset_right = 72.0
offset_bottom = 168.0
theme_override_constants/separation = 10

[node name="InspectButton" type="Button" parent="." unique_id=810640903]
offset_left = 976.0
offset_top = 148.0
offset_right = 1141.0
offset_bottom = 179.0
text = "INSPECT OPPONENT"

[node name="InspectPopup" type="Panel" parent="." unique_id=303135880]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(400, 300)

[node name="ScrollContainer" type="ScrollContainer" parent="InspectPopup" unique_id=1456864686]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="InspectGrid" type="GridContainer" parent="InspectPopup/ScrollContainer" unique_id=254637399]
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 4

[node name="P1_Bark" type="Label" parent="." unique_id=1974256669]
modulate = Color(1, 1, 1, 0)
offset_left = 276.0
offset_top = 434.0
offset_right = 501.0
offset_bottom = 470.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4

[node name="P2_Bark" type="Label" parent="." unique_id=364228376]
modulate = Color(1, 1, 1, 0)
offset_left = 724.0
offset_top = 440.0
offset_right = 949.0
offset_bottom = 476.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
